examples/test/testpolicy14550.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14550
  namespace: namespace144
spec:
  podSelector:
    matchLabels:
      key20: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value18
          key48: value13
      podSelector:
        matchLabels:
          key37: value18
          key23: value35
